--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web --clear",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "build:web": "expo export --platform web",
+    "build:web:dev": "EXPO_ATLAS=true expo export --platform web --source-maps",
+    "serve:prod": "pnpm run build:web:dev && expo serve",
+    "analyze": "expo-atlas .expo/atlas.jsonl"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
@@ -47,6 +51,7 @@
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "expo-atlas": "^0.4.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.9.2"
